Fix alignment of equals sign in MapItem component

--- a/src/styles/cylc/_mutation_form.scss
+++ b/src/styles/cylc/_mutation_form.scss
@@ -15,8 +15,6 @@
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
 
-// @import '~vuetify/lib/components/VTextField/_variables.scss';
-
 .c-mutation-dialog {
   margin-left: 0;
   margin-right: 0;
@@ -31,17 +29,16 @@
     }
   }
 
-  .v-theme--light.v-icon.remove-btn.v-icon--disabled {
-    color: rgba(0, 0, 0, 0.12) !important;
+  .remove-btn.v-btn--disabled {
+    opacity: 0.12;
   }
 
   .c-key-val {
-    .v-theme--light.v-input--is-disabled input {
-      color: rgba(0, 0, 0, 0.6);
+    .v-input .v-field--disabled {
+      opacity: 0.6;
     }
 
-    .col-auto {
-      // height: $text-field-filled-full-width-outlined-single-line-slot-min-height;
+    .v-col-auto {
       display: flex;
       justify-content: center;
       align-items: center;
